--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
+  },
+  "volta": {
+    "node": "18.14.0"
   }
 }
