--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
+    "recoil": "^0.7.6",
     "zod": "^3.20.6"
   },
   "devDependencies": {
